--- a/next-tic-tac-toe/styles/globals.css
+++ b/next-tic-tac-toe/styles/globals.css
@@ -1,16 +1,26 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.grid {
+  display: inline-grid;
+  grid-gap: 0.5px;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.square {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
 }
 
-* {
-  box-sizing: border-box;
+.square_o {
+  background-color: rgb(87, 218, 21);
+}
+
+.square_x {
+  background-color: crimson;
+}
+
+.reset {
+  margin-top: 10px;
 }
